--- a/render.yaml
+++ b/render.yaml
@@ -1,7 +1,6 @@
 services:
   - type: web
-    name: tracking-server
+    name: email-tracking-server
     env: python
-    buildCommand: pip install -r requirements.txt
+    buildCommand: ""
     startCommand: uvicorn main:app --host 0.0.0.0 --port 10000
-    plan: free
